[workspace.package]
version = "0.1.1"
edition = "2021"

[package]
name = "tiron-workspace"
version.workspace = true
edition.workspace = true
default-run  = "tiron"

[[bin]]
name = "tiron"
path = "tiron/src/main.rs"

[[bin]]
name = "tiron-node"
path = "tiron-node/src/main.rs"

[[bin]]
name = "tiron-lsp"
path = "tiron-lsp/src/main.rs"

[dependencies]
clap              = { workspace = true }
anyhow            = { workspace = true }
tiron             = { workspace = true }
tiron-node        = { workspace = true }

[workspace]
members = [
  "tiron",
  "tiron-tui",
  "tiron-lsp",
  "tiron-node",
  "tiron-common",
]

[workspace.dependencies]
ratatui           = "0.26.1"
crossterm         = "0.27.0"
bincode           = "1.3.3"
anyhow            = "1.0.81"
uuid              = { version = "1.8.0", features = ["serde", "v4"] }
clap              = { version = "4.5.0", default-features = false, features = ["std", "help", "usage", "derive"] }
crossbeam-channel = { version = "0.5.11" }
strum             = { version = "0.26.2" }
strum_macros      = { version = "0.26.2" }
serde             = { version = "1.0.197", features = ["derive"] }
rcl               = { git = "https://github.com/ruuda/rcl", rev = "6bb68da8ef1ef36f8a38453e7832efb498dc082e" }
tiron             = { path = "./tiron" }
tiron-tui         = { path = "./tiron-tui" }
tiron-node        = { path = "./tiron-node" }
tiron-common      = { path = "./tiron-common" }
