[workspace.package]
version = "0.1.5"
edition = "2021"

[package]
name = "tiron-workspace"
version.workspace = true
edition.workspace = true
default-run  = "tiron"

[[bin]]
name = "tiron"
path = "tiron/src/main.rs"

[[bin]]
name = "tiron-node"
path = "tiron-node/src/main.rs"

[[bin]]
name = "tiron-lsp"
path = "tiron-lsp/src/main.rs"

[dependencies]
clap              = { workspace = true }
anyhow            = { workspace = true }
tiron             = { workspace = true }
tiron-node        = { workspace = true }

[workspace]
members = [
  "tiron",
  "tiron-tui",
  "tiron-lsp",
  "tiron-node",
  "tiron-common",
]

[workspace.dependencies]
hcl-rs            = { git = "https://github.com/lapce/hcl-rs", rev = "fb0ac2875760a8219899f5a4d774d0996a5b06dd" }
hcl-edit          = { git = "https://github.com/lapce/hcl-rs", rev = "fb0ac2875760a8219899f5a4d774d0996a5b06dd" }
tempfile          = "3.10.1"
os_info           = "3.7"
itertools         = "0.12.1"
documented        = "0.4.1"
ratatui           = "0.26.1"
crossterm         = "0.27.0"
serde_json        = "1.0.115"
bincode           = "1.3.3"
anyhow            = "1.0.81"
uuid              = { version = "1.8.0", features = ["serde", "v4"] }
clap              = { version = "4.5.0", default-features = false, features = ["std", "help", "usage", "derive"] }
crossbeam-channel = { version = "0.5.11" }
strum             = { version = "0.26.2" }
strum_macros      = { version = "0.26.2" }
serde             = { version = "1.0.197", features = ["derive"] }
tiron             = { path = "./tiron" }
tiron-tui         = { path = "./tiron-tui" }
tiron-node        = { path = "./tiron-node" }
tiron-common      = { path = "./tiron-common" }
