[package]
name = "lapon"
version.workspace = true
edition.workspace = true

[dependencies]
clap              = { workspace = true }
crossbeam-channel = { workspace = true }
strum             = { workspace = true }
strum_macros      = { workspace = true }
serde             = { workspace = true }
bincode           = { workspace = true }
anyhow            = { workspace = true }
rcl               = { workspace = true }
lapon-node        = { workspace = true }
