[package]
name = "tiron-common"
version.workspace = true
edition.workspace = true

[dependencies]
hcl-rs               = { workspace = true }
hcl-edit             = { workspace = true }
anyhow               = { workspace = true }
serde                = { workspace = true }
uuid                 = { workspace = true }
