[package]
name = "tiron-node"
version.workspace = true
edition.workspace = true

[dependencies]
os_info           = { workspace = true }
documented        = { workspace = true }
uuid              = { workspace = true }
rcl               = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
anyhow            = { workspace = true }
bincode           = { workspace = true }
crossbeam-channel = { workspace = true }
tiron-common      = { workspace = true }
