[package]
name = "tiron"
version.workspace = true
edition.workspace = true

[dependencies]
clap              = { workspace = true }
crossbeam-channel = { workspace = true }
strum             = { workspace = true }
strum_macros      = { workspace = true }
serde             = { workspace = true }
bincode           = { workspace = true }
anyhow            = { workspace = true }
uuid              = { workspace = true }
rcl               = { workspace = true }
tiron-tui         = { workspace = true }
tiron-node        = { workspace = true }
tiron-common      = { workspace = true }
